// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option csharp_namespace = "Tafi.Orquestador.Shared.Infrastructure.Integration.gRPC";

package event;

service Event
{
	rpc ProcessEvent (ProcessEventRequest) returns (ProcessEventResponse);	
}

message ProcessEventRequest
{
   string agregadorId=1;
   string agregadorNombre=2;
   string tipoEvento=3;
   string tenantId=4;
   string fechaEvento=5;
   string mensajeId=6;
   string usuarioId=7;
   string topico=8;
   string cuerpoEvento=9;
}

message ProcessEventResponse
{
	bool saved = 1;	
	string message = 2;
}
